--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Find Your ID | Brainware University |</title>
+  <title>Find Your ID | Brainware University | Campus-Quest LTS</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
   <script src="https://kit.fontawesome.com/a39c29d29e.js" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
@@ -37,29 +37,29 @@
     <div class="main-container">
       <!-- Form to Take Students Details-->
       <div class="form-group">
-        <label for="category">Department / Branch:</label>
+        <label for="category">Department / Branch :</label>
         <select id="category">
           <optgroup label="Under Graduate Courses">
-
-            <option value="BAG"> BSc.(H) Agriculture </option>
-            <option value="BBA"> BBA (H)</option>
+            <option value="BAG"> BSc. Agriculture </option>
+            <option value="BBA"> BBA (H.)</option>
             <option value="BBT"> BSc. Biotechnology </option>
             <option value="BBD"> BBA Digital Marketing</option>
             <option value="BBL"> Bachelor of Business Law </option>
             <option value="BCA" selected> BCA </option>
-            <option value="BCT"> Critical Care Technology</option>
-            <option value="BEC"> B.Tech Electronics & Comm </option>
+            <option value="BCT"> Critical Care Technology.</option>
+            <option value="BEC"> B.Tech Electronics & Comm. </option>
             <option value="BEN"> English (H) </option>
-            <option value="BHM"> BBA Hospital Management </option>
+            <option value="BHM"> BHM (Hospital Management) </option>
             <option value="BNC"> Cyber Science Technology </option>
             <option value="BMJ"> BSc. Media Science</option>
             <option value="BMB"> BSc. Micro Biology </option>
             <option value="BNS"> BSc. Nursing </option>
-            <option value="BPA"> BSc. PA (Allied Health Science)</option>
-            <option value="BPT"> BSc. PT (Allied Health Science)</option>
-            <option value="BSO"> BSc. OPTO (Allied Health Science)</option>
-            <option value="BOT"> BSc. OTT (Allied Health Science)</option>
-            <option value="BRI"> BSc. MRIT (Allied Health Science)</option>
+            <option value="GNM"> GNM Nursing</option>
+            <option value="BPA"> BSc. PA (Allied Health Sc.)</option>
+            <option value="BPT"> BSc. PT (Allied Health Sc.)</option>
+            <option value="BSO"> BSc. OPTO (Allied Health Sc.)</option>
+            <option value="BOT"> BSc. OTT (Allied Health Sc.)</option>
+            <option value="BRI"> BSc. MRIT (Allied Health Sc.)</option>
             <option value="BTA"> B.Tech. CSE AI ML</option>
             <option value="BTD"> B.Tech Data Science </option>
             <option value="LLB"> Bachelor of Laws (LLB)</option>
@@ -75,6 +75,8 @@
             <option value="MMJ"> Master of Media Science & Journalism</option>
             <option value="MSM"> MSc. in Mathematics (MSM)</option>
             <option value="MTA"> M. Tech (CSE) </option>
+            <option value="MLM"> Master of Laws (LLM)</option>
+
           </optgroup>
 
           <optgroup label="Diploma Courses">
@@ -92,7 +94,7 @@
       </div>
       <div class="form-group">
 
-        <label for="year">Admission Year:</label>
+        <label for="year">Admission Year :</label>
         <select id="year">
           <option value="19">2019</option>
           <option value="20">2020</option>
@@ -104,10 +106,10 @@
         </select>
       </div>
       <div class="form-group">
-        <label for="number">Roll:</label>
+        <label for="number">Roll :</label>
         <input type="number" id="number" min="1" max="999" placeholder="Example - 304">
       </div>
-      <button id="getImageBtn">Get Image</button>
+      <button id="getImageBtn">Get Student Image</button>
 
       <a href="https://dbport.netlify.app/" target="_blank"><i class="fa-solid fa-user"></i> Who
         am I ?</a>
@@ -139,9 +141,10 @@
       <img src="./images/footerBanner.jpg" alt="BWU Logo">
     </div>
     <div class="footer-links">
+      <a target="_blank" href="https://debasish-barman-0011.github.io/Campus-Quest/">Campus-Quest</a>
       <a target="_blank" href="https://www.brainwareuniversity.ac.in/studentselfservice/">Student Portal</a>
+      <a href="rules-regulations.html">Rules & Regulations</a>
       <a target="_blank" href="https://www.brainwareuniversity.ac.in/review.php">Feedback</a>
-      <a href="#">Rules & Regulations</a>
       <a target="_blank" href="https://www.brainwareuniversity.ac.in/helpline.php">Contact Us</a>
     </div>
     <div class="footer-map">
