New Courses Added

--- a/index.html
+++ b/index.html
@@ -74,10 +74,10 @@
             <option value="MBA"> Master of Buisness Administration(MBA)</option>
             <option value="MCA"> Master of Computer Applications(MCA)</option>
             <option value="MHM"> Master of Hospital Management(MHM)</option>
-            <option value="MMJ"> Master of Media Science & Journalism</option>
+            <option value="MMJ"> Master of Media Sc. & Journalism</option>
             <option value="MSM"> MSc. in Mathematics (MSM)</option>
             <option value="MTA"> M. Tech (CSE) </option>
-            <option value="MLM"> Master of Laws (LLM)</option>
+            <option value="MLM"> Master of Laws (MLM)</option>
 
           </optgroup>
 
