--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             <option value="DCE"> Diploma in Civil</option>
             <option value="DEC"> Diploma in EC</option>
             <option value="DME"> Diploma in Mechanical</option>
-
+            <option value="DPH"> Diploma in Pharmacy</option>
           </optgroup>
 
         </select>
