--- a/index.html
+++ b/index.html
@@ -62,6 +62,8 @@
             <option value="BSO"> BSc. OPTO (Allied Health Sc.)</option>
             <option value="BOT"> BSc. OTT (Allied Health Sc.)</option>
             <option value="BRI"> BSc. MRIT (Allied Health Sc.)</option>
+            <option value="BPH"> Bachelor in Pharmacy</option>
+
             <option value="BTA"> B.Tech. CSE AI ML</option>
             <option value="BTD"> B.Tech Data Science </option>
             <option value="LLB"> Bachelor of Laws (LLB)</option>
