--- a/index.html
+++ b/index.html
@@ -62,8 +62,7 @@
             <option value="BSO"> BSc. OPTO (Allied Health Sc.)</option>
             <option value="BOT"> BSc. OTT (Allied Health Sc.)</option>
             <option value="BRI"> BSc. MRIT (Allied Health Sc.)</option>
-            <option value="BPH"> Bachelor in Pharmacy</option>
-
+            <option value="BPH"> Bachelor in Pharmacy (B. PHARM)</option>
             <option value="BTA"> B.Tech. CSE AI ML</option>
             <option value="BTD"> B.Tech Data Science </option>
             <option value="LLB"> Bachelor of Laws (LLB)</option>
@@ -89,7 +88,7 @@
             <option value="DCE"> Diploma in Civil</option>
             <option value="DEC"> Diploma in EC</option>
             <option value="DME"> Diploma in Mechanical</option>
-            <option value="DPH"> Diploma in Pharmacy</option>
+            <option value="DPH"> Diploma in Pharmacy (D. PHARM)</option>
           </optgroup>
 
         </select>
