--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
   <script src="https://kit.fontawesome.com/a39c29d29e.js" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-  <style>
 
-  </style>
   <link rel="stylesheet" href="style.css">
 </head>
 
@@ -27,12 +25,13 @@
       <a href="rules-regulations.html">Rules & Regulations</a>
       <a href="developers.html">Developers</a>
     </div>
-    <div class="theme-toggle">
-      <i class="fas fa-sun"></i>
+
+    <div class="navbar-actions">
+
+      <button id="logoutBtn" class="logout-button"><i class="fa-solid fa-right-from-bracket"></i></button>
+
     </div>
-    <div class="navbar-toggle">
-      <i class="fas fa-bars"></i>
-    </div>
+
   </nav>
 
   <div class="content-wrapper">
@@ -138,6 +137,99 @@
       </div>
     </div>
   </div>
+
+
+
+
+
+
+  <!-- Bootstrap Bundle with Popper -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
+
+  <!-- SweetAlert JS -->
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
+  <script type="module">
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-app.js";
+    import { getAuth, signOut } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-auth.js";
+
+    const firebaseConfig = {
+      apiKey: "AIzaSyCql6VozLSOw1OyhUhIC9zwkrqK9pc9D8c",
+      authDomain: "fir-auth-90c12.firebaseapp.com",
+      projectId: "fir-auth-90c12",
+      storageBucket: "fir-auth-90c12.appspot.com",
+      messagingSenderId: "50904967131",
+      appId: "1:50904967131:web:219bbe9394e23c4eff69fe"
+    };
+
+    const app = initializeApp(firebaseConfig);
+    const auth = getAuth(app);
+
+    // Handle logout //
+    document.getElementById('logoutBtn').addEventListener('click', () => {
+      signOut(auth).then(() => {
+        Swal.fire({
+          icon: 'success',
+          title: 'Logged Out!',
+          showConfirmButton: false,
+          timer: 1500
+        }).then(() => {
+          localStorage.removeItem("userLoggedIn");  // Clear login status from localStorage //
+          window.location.href = 'login.html';  // Redirect to login page after logout //
+        });
+      }).catch(error => {
+        Swal.fire({
+          icon: 'error',
+          title: 'Logout Failed',
+          text: error.message
+        });
+      });
+    });
+
+    // Prevent access to index.html if the user is not logged in //
+    const userLoggedIn = localStorage.getItem("userLoggedIn");
+
+    if (!userLoggedIn) {
+      Swal.fire({
+        icon: 'warning',
+        title: 'Login Required',
+        text: 'Register Yourself Before Login',
+        timer: 3000,
+        showCancelButton: false,
+        showConfirmButton: false
+      }).then(() => {
+        setTimeout(() => {
+          window.location.href = 'login.html';
+        }, 1000);
+      });
+    }
+
+    // Auto 3 minutes logout logic //
+    let inactivityTimer;
+    function resetInactivityTimer() {
+      clearTimeout(inactivityTimer);
+      inactivityTimer = setTimeout(() => {
+        signOut(auth).then(() => {
+          Swal.fire({
+            icon: 'error',
+            title: 'You have been logged out.',
+            showConfirmButton: false,
+            timer: 3000
+          }).then(() => {
+            localStorage.removeItem("userLoggedIn");
+            window.location.href = 'login.html';
+          });
+        });
+      }, 180000);  // Auto logout after 3 minutes (180000 ms) of inactivity //
+    }
+
+    // Event listeners to reset inactivity timer on user interaction //
+    window.onload = resetInactivityTimer;
+    document.addEventListener('mousemove', resetInactivityTimer);
+    document.addEventListener('keypress', resetInactivityTimer);
+    document.addEventListener('touchstart', resetInactivityTimer);
+
+  </script>
 
   <footer class="footer">
     <div class="footer-logo">
