Updated with latest info and Social Accounts

--- a/rules-regulations.html
+++ b/rules-regulations.html
@@ -28,13 +28,24 @@
       <a href="purpose.html">Purpose</a>
       <a href="">Rules & Regulations</a>
     </div>
-    <div class="theme-toggle">
-      <i class="fas fa-sun"></i>
+
+    <!-- Social Accounts -->
+    <div class="social">
+      <a href="https://www.linkedin.com/in/debasish-barman-923806280/">
+        <i class="fa-brands fa-linkedin"></i>
+      </a>
+      <a href="https://www.facebook.com/mr.debasish.barman">
+        <i class="fa-brands fa-facebook"></i>
+      </a>
     </div>
+    <!-- MenuBar -->
     <div class="navbar-toggle">
       <i class="fas fa-bars"></i>
     </div>
+
   </nav>
+  <!-- Nav Ends Here -->
+
 
   <div class="rules-container">
     <h1>Rules & Regulations</h1>
@@ -97,9 +108,8 @@
 
   </footer>
 
+
   <script src="theme.js"></script>
-
-
 </body>
 
 </html>
