--- a/developers.html
+++ b/developers.html
@@ -58,13 +58,23 @@
       <a href="purpose.html">Purpose</a>
       <a href="">Rules & Regulations</a>
     </div>
-    <div class="theme-toggle">
-      <i class="fas fa-sun"></i>
+
+    <!-- Social Accounts -->
+    <div class="social">
+      <a href="https://www.linkedin.com/in/debasish-barman-923806280/">
+        <i class="fa-brands fa-linkedin"></i>
+      </a>
+      <a href="https://www.facebook.com/mr.debasish.barman">
+        <i class="fa-brands fa-facebook"></i>
+      </a>
     </div>
+    <!-- MenuBar -->
     <div class="navbar-toggle">
       <i class="fas fa-bars"></i>
     </div>
+
   </nav>
+  <!-- Nav Ends Here -->
 
   <div class="developers-container">
     <div class="developer-card">
@@ -94,7 +104,7 @@
 
   </footer>
 
-
+  <script src="theme.js"></script>
 
   <script>
     document.addEventListener('DOMContentLoaded', function () {
@@ -120,7 +130,6 @@
       });
     });
   </script>
-  <script src="theme.js"></script>
 </body>
 
 </html>
