--- a/purpose.html
+++ b/purpose.html
@@ -29,13 +29,23 @@
       <a href="">Purpose</a>
       <a href="rules-regulations.html">Rules & Regulations</a>
     </div>
-    <div class="theme-toggle">
-      <i class="fas fa-sun"></i>
+
+    <!-- Social Accounts -->
+    <div class="social">
+      <a href="https://www.linkedin.com/in/debasish-barman-923806280/">
+        <i class="fa-brands fa-linkedin"></i>
+      </a>
+      <a href="https://www.facebook.com/mr.debasish.barman">
+        <i class="fa-brands fa-facebook"></i>
+      </a>
     </div>
+    <!-- MenuBar -->
     <div class="navbar-toggle">
       <i class="fas fa-bars"></i>
     </div>
+
   </nav>
+  <!-- Nav Ends Here -->
 
   <div class="purpose-container">
     <h1>Purpose of the ID Photo Retrieval System</h1>
