Register Issue Resolved

--- a/register.html
+++ b/register.html
@@ -51,10 +51,10 @@
           <label for="studentNameInp">Full Name</label>
         </div>
 
-        <!-- <div class="form-floating mb-3">
+        <div class="form-floating mb-3">
           <input type="text" class="form-control" id="departmentInp" placeholder="Department" required>
           <label for="departmentInp">Department</label>
-        </div> -->
+        </div>
 
         <div class="form-floating mb-3">
           <input type="email" class="form-control" id="emailInp" placeholder="name@example.com" required>
